--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
  <html lang="EN"/>
    <title></title>
    <head></head>
@@ -35,3 +35,74 @@
    </body>
 
  </html>
+-->
+
+
+<!DOCTYPE html>
+ <html lang="EN"/>
+   <title></title>
+   <head></head>
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+   <body>
+
+
+    <div class="container">
+     <div class="row">
+      <div class="col-12 text-center">
+       <h2> BigBike </h2>
+       <hr class="hr" />
+      </div>
+     </div>
+         <div class="row">
+          <div class="col-4 text-center">
+           <label 1d="product1"> </label>
+            <img src=" " style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
+            <label for='product1" id="price1"></label>
+             <input type="number" class="form-control" id="qty1" placeholder=Enter quantity"/><br>
+             
+             </div>
+             <div class="row">
+          <div class="col-4 text-center">
+           <label 1d="product1"> </label>
+            <img src=" " style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
+            <label for='product1" id="price1"></label>
+             <input type="number" class="form-control" id="qty1" placeholder=Enter quantity"/><br>
+           </div>
+            
+            <div class="row">
+          <div class="col-4 text-center">
+           <label 1d="product1"> </label>
+            <img src=" " style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
+            <label for='product1" id="price1"></label>
+             <input type="number" class="form-control" id="qty1" placeholder=Enter quantity"/><br>
+
+             <div class="row">
+          <div class="col-4 text-center">
+           <label 1d="product1"> <\label>
+            <img arc=" " style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
+            <label for='product1" id="price1"></label>
+             <input type="number" class="form-control" id="qty1" placeholder=Enter quantity"/><br>
+
+            <div class="row">
+          <div class="col-4 text-center">
+           <label 1d="product1"> <\label>
+            <img arc=" " style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
+            <label for='product1" id="price1"></label>
+             <input type="number" class="form-control" id="qty1" placeholder=Enter quantity"/><br>
+
+             <div class="row">
+          <div class="col-4 text-center">
+           <label 1d="product1"> <\label>
+            <img arc=" " style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
+            <label for='product1" id="price1"></label>
+             <input type="number" class="form-control" id="qty1" placeholder=Enter quantity"/><br>
+           </div>
+            <div class="col-4">
+             <label for="charts"> Orders </label<br>
+             <textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width:350px;heigth: 400;front-size: 12px;"> </textarea>
+             <input type="text" class="form-contrtol border-0" id="total" readonly placeholder="Total"/>
+             <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/>
+             <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
+     <script src="index.js"></script>
+   </body>
