--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <!DOCTYPE html>
  <html lang="EN"/>
-   <title></title>
+   <title>Rene Serantes BSIT3-C</title>
    <head></head>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -57,7 +57,7 @@
          <div class="row">
           <div class="col-4 text-center">
            <label 1d="product1"> </label>
-            <img src=" " style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
+            <img src="cbr-color-black.png" style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
             <label for='product1" id="price1"></label>
              <input type="number" class="form-control" id="qty1" placeholder=Enter quantity"/><br>
              
@@ -65,7 +65,7 @@
              <div class="row">
           <div class="col-4 text-center">
            <label 1d="product1"> </label>
-            <img src=" " style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
+            <img src="cbr-color-red.png" style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
             <label for='product1" id="price1"></label>
              <input type="number" class="form-control" id="qty1" placeholder=Enter quantity"/><br>
            </div>
@@ -73,28 +73,28 @@
             <div class="row">
           <div class="col-4 text-center">
            <label 1d="product1"> </label>
-            <img src=" " style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
+            <img src="colors_ph02_big.jpg" style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
             <label for='product1" id="price1"></label>
              <input type="number" class="form-control" id="qty1" placeholder=Enter quantity"/><br>
 
              <div class="row">
           <div class="col-4 text-center">
            <label 1d="product1"> <\label>
-            <img arc=" " style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
+            <img arc="suzuki-hayabusa-63da1f4fcc64b.jpeg" style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
             <label for='product1" id="price1"></label>
              <input type="number" class="form-control" id="qty1" placeholder=Enter quantity"/><br>
 
             <div class="row">
           <div class="col-4 text-center">
            <label 1d="product1"> <\label>
-            <img arc=" " style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
+            <img arc="ninja.jpg" style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
             <label for='product1" id="price1"></label>
              <input type="number" class="form-control" id="qty1" placeholder=Enter quantity"/><br>
 
              <div class="row">
           <div class="col-4 text-center">
            <label 1d="product1"> <\label>
-            <img arc=" " style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
+            <img arc="ninja r1000.jpg" style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
             <label for='product1" id="price1"></label>
              <input type="number" class="form-control" id="qty1" placeholder=Enter quantity"/><br>
            </div>
