--- a/index.html
+++ b/index.html
@@ -39,70 +39,70 @@
 
 
 <!DOCTYPE html>
- <html lang="EN"/>
-   <title>Rene Serantes BSIT3-C</title>
-   <head></head>
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-   <body>
-
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rene Serantes BSIT3-C</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</head>
+<body>
     <div class="container">
-     <div class="row">
-      <div class="col-12 text-center">
-       <h2> BigBike </h2>
-       <hr class="hr" />
-      </div>
-     </div>
-         <div class="row">
-          <div class="col-4 text-center">
-           <label 1d="product1"> </label>
-            <img src="cbr-color-black.png" style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
-            <label for='product1" id="price1"></label>
-             <input type="number" class="form-control" id="qty1" placeholder=Enter quantity"/><br>
-             
-             </div>
-             <div class="row">
-          <div class="col-4 text-center">
-           <label 1d="product1"> </label>
-            <img src="cbr-color-red.png" style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
-            <label for='product1" id="price1"></label>
-             <input type="number" class="form-control" id="qty1" placeholder=Enter quantity"/><br>
-           </div>
-            
-            <div class="row">
-          <div class="col-4 text-center">
-           <label 1d="product1"> </label>
-            <img src="colors_ph02_big.jpg" style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
-            <label for='product1" id="price1"></label>
-             <input type="number" class="form-control" id="qty1" placeholder=Enter quantity"/><br>
-
-             <div class="row">
-          <div class="col-4 text-center">
-           <label 1d="product1"> <\label>
-            <img arc="suzuki-hayabusa-63da1f4fcc64b.jpeg" style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
-            <label for='product1" id="price1"></label>
-             <input type="number" class="form-control" id="qty1" placeholder=Enter quantity"/><br>
-
-            <div class="row">
-          <div class="col-4 text-center">
-           <label 1d="product1"> <\label>
-            <img arc="ninja.jpg" style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
-            <label for='product1" id="price1"></label>
-             <input type="number" class="form-control" id="qty1" placeholder=Enter quantity"/><br>
-
-             <div class="row">
-          <div class="col-4 text-center">
-           <label 1d="product1"> <\label>
-            <img arc="ninja r1000.jpg" style="width:400px;heigth:500px;" class="img-thumbnail"/><br>
-            <label for='product1" id="price1"></label>
-             <input type="number" class="form-control" id="qty1" placeholder=Enter quantity"/><br>
-           </div>
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2>BigBike</h2>
+                <hr class="hr" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4 text-center">
+                <label id="product1">CBR Black</label>
+                <img src="cbr-color-black.png" style="width:400px;height:500px;" class="img-thumbnail"/><br>
+                <label for="product1" id="price1">28503</label>
+                <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
+            </div>
+            <div class="col-4 text-center">
+                <label id="product2">CBR Red</label>
+                <img src="cbr-color-red.png" style="width:400px;height:500px;" class="img-thumbnail"/><br>
+                <label for="product2" id="price2">500069</label>
+                <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
+            </div>
+            <div class="col-4 text-center">
+                <label id="product3">Color PH02</label>
+                <img src="colors_ph02_big.jpg" style="width:400px;height:500px;" class="img-thumbnail"/><br>
+                <label for="product3" id="price3">60066</label>
+                <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
+            </div>
+            <div class="col-4 text-center">
+                <label id="product4">Suzuki Hayabusa</label>
+                <img src="suzuki-hayabusa-63da1f4fcc64b.jpeg" style="width:400px;height:500px;" class="img-thumbnail"/><br>
+                <label for="product4" id="price4">69999</label>
+                <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
+            </div>
+            <div class="col-4 text-center">
+                <label id="product5">Ninja</label>
+                <img src="ninja.jpg" style="width:400px;height:500px;" class="img-thumbnail"/><br>
+                <label for="product5" id="price5">59999</label>
+                <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
+            </div>
+            <div class="col-4 text-center">
+                <label id="product6">Ninja R1000</label>
+                <img src="ninja-r1000.jpg" style="width:400px;height:500px;" class="img-thumbnail"/><br>
+                <label for="product6" id="price6">69569</label>
+                <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
+            </div>
             <div class="col-4">
-             <label for="charts"> Orders </label<br>
-             <textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width:350px;heigth: 400;front-size: 12px;"> </textarea>
-             <input type="text" class="form-contrtol border-0" id="total" readonly placeholder="Total"/>
-             <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/>
-             <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
-     <script src="index.js"></script>
-   </body>
+                <label for="carts">Orders</label><br>
+                <textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width:350px;height:400px;font-size:12px;"></textarea>
+                <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/>
+                <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/>
+                <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
+                <button class="btn btn-success" id="purchaseNow">Purchase</button>
+            </div>
+        </div>
+    </div>
+    <script src="index.js"></script>
+</body>
+</html>
+
