--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="col-4 text-center">
                 <label id="product6">Ninja R1000</label>
-                <img src="ninja-r1000.jpg" style="width:400px;height:500px;" class="img-thumbnail"/><br>
+                <img src="ninja r1000.jpg" style="width:400px;height:500px;" class="img-thumbnail"/><br>
                 <label for="product6" id="price6">69569</label>
                 <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
             </div>
