--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/>
                 <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/>
                 <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
-                <button class="btn btn-success" id="purchaseNow">Purchase</button>
+                <button class="btn btn-success" id="purchaseButton">Purchase</button>
             </div>
         </div>
     </div>
