--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<style>
+p {
+  background-image: url('img_girl.jpg');
+}
+</style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rene Serantes BSIT3-C</title>
