--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <head>
 <style>
 p {
-  background-image: url('img_girl.jpg');
+  background-image: url('istockphoto-1143843876-612x612.jpg');
 }
 </style>
     <meta charset="UTF-8">
