--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<style>
-p {
-  background-image: url('istockphoto-1143843876-612x612.jpg');
-}
-</style>
+    <style>
+        body {
+            background-image: url('istockphoto-1143843876-612x612.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rene Serantes BSIT3-C</title>
