--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
-                <h2>BigBike</h2>
+               <p style="color:red;"><h2>BigBike</h2></p>
                 <hr class="hr" />
             </div>
         </div>
