--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
-               <p style="color:red;"><h2>BigBike</h2></p>
+               <h2>BigBike</h2>
                 <hr class="hr" />
             </div>
         </div>
