--- a/index.html
+++ b/index.html
@@ -67,37 +67,37 @@
             <div class="col-4 text-center">
                 <label id="product1">CBR Black</label>
                 <img src="cbr-color-black.png" style="width:400px;height:500px;" class="img-thumbnail"/><br>
-                <label for="product1" id="price1">28503</label>
+                <label for="product1" id="price1">500,000</label>
                 <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
             </div>
             <div class="col-4 text-center">
                 <label id="product2">CBR Red</label>
                 <img src="cbr-color-red.png" style="width:400px;height:500px;" class="img-thumbnail"/><br>
-                <label for="product2" id="price2">500069</label>
+                <label for="product2" id="price2">600,000</label>
                 <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
             </div>
             <div class="col-4 text-center">
-                <label id="product3">Color PH02</label>
+                <label id="product3">Hayabusa White</label>
                 <img src="colors_ph02_big.jpg" style="width:400px;height:500px;" class="img-thumbnail"/><br>
-                <label for="product3" id="price3">60066</label>
+                <label for="product3" id="price3">100000</label>
                 <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
             </div>
             <div class="col-4 text-center">
                 <label id="product4">Suzuki Hayabusa</label>
                 <img src="suzuki-hayabusa-63da1f4fcc64b.jpeg" style="width:400px;height:500px;" class="img-thumbnail"/><br>
-                <label for="product4" id="price4">69999</label>
+                <label for="product4" id="price4">200000</label>
                 <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
             </div>
             <div class="col-4 text-center">
                 <label id="product5">Ninja</label>
                 <img src="ninja.jpg" style="width:400px;height:500px;" class="img-thumbnail"/><br>
-                <label for="product5" id="price5">59999</label>
+                <label for="product5" id="price5">600,000</label>
                 <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
             </div>
             <div class="col-4 text-center">
                 <label id="product6">Ninja R1000</label>
                 <img src="ninja r1000.jpg" style="width:400px;height:500px;" class="img-thumbnail"/><br>
-                <label for="product6" id="price6">69569</label>
+                <label for="product6" id="price6">800,000</label>
                 <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
             </div>
             <div class="col-4">
